--- a/7_moduli/esercizio_036/templates/table.html
+++ b/7_moduli/esercizio_036/templates/table.html
@@ -5,7 +5,7 @@
     </tr>
     {% for student in students %}
     <tr>
-        <td>{{student.student}}</td>
+        <td>{{student.name}}</td>
         <td>{{student.vote}}</td>
     </tr>
     {%endfor%}
